--- a/force-app/main/default/classes/StringUtilsTest.cls
+++ b/force-app/main/default/classes/StringUtilsTest.cls
@@ -91,8 +91,8 @@ private class StringUtilsTest {
     
     @isTest(SeeAllData=false)
     static void abbreviate4args() {
+        System.assertEquals(null, StringUtils.abbreviate(null, null, 5, 5));
 /*
-    * StringUtils.abbreviate(null, null, *, *)                 = null
     * StringUtils.abbreviate('abcdefghijklmno', null, *, *)    = 'abcdefghijklmno'
     * StringUtils.abbreviate('', '...', 0, 4)                  = ''
     * StringUtils.abbreviate('abcdefghijklmno', '---', -1, 10) = 'abcdefg---'
@@ -104,51 +104,56 @@ private class StringUtilsTest {
     * StringUtils.abbreviate('abcdefghijklmno', '*', 9, 10)    = '*ghijklmno'
     * StringUtils.abbreviate('abcdefghijklmno', ''', 10, 10)   = ''ghijklmno'
     * StringUtils.abbreviate('abcdefghijklmno', '!', 12, 10)   = '!ghijklmno'
-    * StringUtils.abbreviate('abcdefghij', 'abra', 0, 4)       = IllegalArgumentException
-    * StringUtils.abbreviate('abcdefghij', '...', 5, 6)        = IllegalArgumentException
-   global static String abbreviate(final String str, final String abbrevMarker, Integer offset, final Integer maxWidth) {
 */
+        try {
+            StringUtils.abbreviate('abcdefghij', 'abra', 0, 4);
+            System.assert(false, 'ここに入ってはダメ');
+        } catch(IllegalArgumentException ex) {
+            System.assert(true);
+        }
+        try {
+            StringUtils.abbreviate('abcdefghij', '...', 5, 6);
+            System.assert(false, 'ここに入ってはダメ');
+        } catch(IllegalArgumentException ex) {
+            System.assert(true);
+        }
     }
 
     @isTest(SeeAllData=false)
     static void abbreviateMiddle() {
+        System.assertEquals(null, StringUtils.abbreviateMiddle(null, null, 0));
 /*
-    * StringUtils.abbreviateMiddle(null, null, 0)      = null
     * StringUtils.abbreviateMiddle('abc', null, 0)      = 'abc'
     * StringUtils.abbreviateMiddle('abc', '.', 0)      = 'abc'
     * StringUtils.abbreviateMiddle('abc', '.', 3)      = 'abc'
-    * StringUtils.abbreviateMiddle('abcdef', '.', 4)     = 'ab.f'
-   global static String abbreviateMiddle(final String str, final String middle, final Integer length) {
     */
+        System.assertEquals('ab.f', StringUtils.abbreviateMiddle('abcdef', '.', 4));
     }
-
     
     @isTest(SeeAllData=false)
     static void center2args() {
+        System.assertEquals(null, StringUtils.center(null, 100));
 /*
-    * StringUtils.center(null, *)   = null
+    *    = null
     * StringUtils.center('', 4)     = '    '
     * StringUtils.center('ab', -1)  = 'ab'
     * StringUtils.center('ab', 4)   = ' ab '
     * StringUtils.center('abcd', 2) = 'abcd'
-    * StringUtils.center('a', 4)    = ' a  '
-   global static String center(final String str, final Integer size) {
     */
-}
-
+        System.assertEquals(' a  ', StringUtils.center('a', 4));
+    }
 
     @isTest(SeeAllData=false)
     static void center3argsSII() {
+        System.assertEquals(null, StringUtils.center(null, 3, ' '));
 /*
-    * StringUtils.center(null, *, *)     = null
     * StringUtils.center('', 4, ' ')     = '    '
     * StringUtils.center('ab', -1, ' ')  = 'ab'
     * StringUtils.center('ab', 4, ' ')   = ' ab '
     * StringUtils.center('abcd', 2, ' ') = 'abcd'
     * StringUtils.center('a', 4, ' ')    = ' a  '
-    * StringUtils.center('a', 4, 'y')    = 'yayy'
-   global static String center(String str, final Integer size, final Integer padChar) {
     */
+        System.assertEquals('yayy', StringUtils.center('a', 4, 'y'));
     }
 
     @isTest(SeeAllData=false)
@@ -162,9 +167,8 @@ private class StringUtilsTest {
     * StringUtils.center('a', 4, ' ')    = ' a  '
     * StringUtils.center('a', 4, 'yz')   = 'yayz'
     * StringUtils.center('abc', 7, null) = '  abc  '
-    * StringUtils.center('abc', 7, '')   = '  abc  '
-   global static String center(String str, final Integer size, String padStr) {
     */
+        System.assertEquals('  abc  ', StringUtils.center('abc', 7, ''));
     }
 
     @isTest(SeeAllData=false)
